--- a/builder.html
+++ b/builder.html
@@ -14,7 +14,7 @@
 	<body>
 		<div id='runnning_div'>
 			<p>
-				Total Value <input type=text id='total_value' value="0.00">
+				value <input type=text id='total_value' value="0.00" size=10>
 				<input type=button value='save' onclick='saveState()'>
 				<input type=button value='reset' onclick='reset()'>
 				<input type=button value='export' onclick='exportState()'>
