--- a/builder.html
+++ b/builder.html
@@ -2,11 +2,10 @@
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 
-<script type="text/javascript" src="js/decimal.min.js"></script>
 <script type="text/javascript" src="js/constants.js"></script>
-
 <script type="text/javascript" src="js/functions.js"></script>
-<script type="text/javascript" src="js/cookies.js"></script>
+<script type="text/javascript" src="js/state.js"></script>
+
 <script>
 
 </script>
@@ -26,15 +25,6 @@
 		<div></div>
 
 		<div id="items_div"></div>
-		<div id="options_div">
-			<p> <input type=button value='save' onclick='saveState()'>
-				<input type=button value='reset' onclick='reset()'>
-				<input type=button value='export' onclick='exportState()'>
-				<input type=button value='load' onclick='loadState()'> </p>
-
-			<p>Timer <input type=text id="timer" value=1000> <input type=button value='set timer' on onclick='update_timer_interval();'></p>
-			<p>Running <input type=text id="running" value=0></p>
-		</div>
 		<div id="notes_div">
 			<p>Notes:
 			<ul>
