added value acceleration

--- a/builder.html
+++ b/builder.html
@@ -18,6 +18,10 @@
 				<div id='total_value_div'>
 					<b><text>value</text></b>
 					<text id="total_value">0</text>
+					(<b><text>rate</text></b>
+					<text id="total_value_rate">0</text>
+					<b><text>acceleration</text></b>
+					<text id="total_value_accel">0</text>)
 				</div>
 			</p>
 		</div>
