--- a/builder.html
+++ b/builder.html
@@ -11,7 +11,9 @@
 </script>
 
 <html>
-	<head></head>
+	<head>
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+	</head>
 	<body>
 		<div id='top_div'>
 			<p>
@@ -28,7 +30,9 @@
 
 		<div></div>
 
-		<div id="items_div"></div>
+		<div id="items_div">
+			<p><table id='main_table' class="data-test"></table></p>
+		</div>
 		<div id="notes_div">
 			<p>Notes:
 			<ul>
