--- a/builder.html
+++ b/builder.html
@@ -31,7 +31,59 @@
 		<div></div>
 
 		<div id="items_div">
-			<p><table id='main_table' class="data-test"></table></p>
+			<p>
+			<table>
+				<tr>
+					<td>
+						<table id='main_table' class="data-test">
+							<tr>
+								<th>#</th>
+								<th align="left">name</th>
+								<th class="numeric-display">count</th>
+								<th class="numeric-display">accumulate/s</th>
+								<th class="numeric-display">build/s</th>
+								<th colspan=3>build</th>
+								<th>pull</th>
+								<th colspan=3>rate+</th>
+								<th>pull</th>
+							</tr>
+
+							<tr id='row-to-clone' data-visible="false">
+								<td></td> <td></td> <td></td> <td></td> <td></td>
+								<td></td> <td></td> <td></td> <td></td> <td></td>
+								<td></td> <td></td> <td></td>
+							</tr>
+						</table>
+					</td>
+					<td>
+						<table id='messages_table' class="data-test">
+							<tr>
+								<td align=middle><text><b>messages</b></text></td>								
+							</tr>
+							<tr>
+								<td><textarea id="messages" class="main-message-area"></textarea></td>								
+							</tr>
+							<tr>
+								<td>
+									<button class="save_button" title="save game state">save</button>
+									<button class="reset_button" title="reset game">reset</button>
+									<button class="export_button" title="export serialized game state to messages">export</button>
+									<button class="load_button" title="load serialized game state from messages">load</button>
+									<button class="clear_button" title="clear messages">clear</button>
+									<button class="pause_button" title="pause/resume game ticker">pause/resume</button>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<button class="tick_button" title="set game tick interval">tick</button>
+									<text size=6 id="timer">1000</text>
+									<text>ms</text>
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table></p>
 		</div>
 		<div id="notes_div">
 			<p>notes:
@@ -42,8 +94,11 @@
 			</ul>
 			</p>
 		</div>
+		<div id="its-wrapper"></div>
 	</body>
 </html>
+
+<script src='http://brandonbrule.github.io/itsa/js/itsa.js'></script>
 
 <script type="text/javascript" src="js/builder.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
