added some layout changes and element hiding

--- a/builder.html
+++ b/builder.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
+		<div id="its-wrapper"></div>
 		<div id='top_div'>
 			<p>
 				<div id='total_value_div'>
@@ -37,7 +38,7 @@
 					<td>
 						<table id='main_table' class="data-test">
 							<tr>
-								<th>#</th>
+								<th class="item-index-display">#</th>
 								<th align="left">name</th>
 								<th class="numeric-display">count</th>
 								<th class="numeric-display">accumulate/s</th>
@@ -94,7 +95,6 @@
 			</ul>
 			</p>
 		</div>
-		<div id="its-wrapper"></div>
 	</body>
 </html>
 
