--- a/builder.html
+++ b/builder.html
@@ -43,9 +43,9 @@
 								<th class="numeric-display">count</th>
 								<th class="numeric-display">accumulate/s</th>
 								<th class="numeric-display">build/s</th>
-								<th colspan=3>build</th>
+								<th colspan=3 class="colspan-display">build</th>
 								<th>pull</th>
-								<th colspan=3>rate+</th>
+								<th colspan=3 class="colspan-display">rate+</th>
 								<th>pull</th>
 							</tr>
 
@@ -66,19 +66,21 @@
 							</tr>
 							<tr>
 								<td>
+									<button class="pause_button" title="pause/resume game ticker">pause/resume</button>
 									<button class="save_button" title="save game state">save</button>
-									<button class="reset_button" title="reset game">reset</button>
+									<button class="clear_button" title="clear messages">clear</button>
 									<button class="export_button" title="export serialized game state to messages">export</button>
 									<button class="load_button" title="load serialized game state from messages">load</button>
-									<button class="clear_button" title="clear messages">clear</button>
-									<button class="pause_button" title="pause/resume game ticker">pause/resume</button>
+									<button class="export_json_button" title="show game state JSON">JSON</button>
 								</td>
 							</tr>
 							<tr>
 								<td>
-									<button class="tick_button" title="set game tick interval">tick</button>
+									<!--button class="tick_button" title="set game tick interval">tick</button>
 									<text size=6 id="timer">1000</text>
-									<text>ms</text>
+									<text>ms</text-->
+									<button class="reset_button" title="reset game">reset game</button>
+									<button class="hard_reset" title="blow away local storage" onclick="hardReset();">hard reset</button>
 								</td>
 							</tr>
 						</table>
