implemented push up/down

--- a/builder.html
+++ b/builder.html
@@ -66,7 +66,7 @@
 							</tr>
 							<tr>
 								<td>
-									<button class="pause_button" title="pause/resume game ticker">pause/resume</button>
+									<button class="pause_button" title="pause/resume game ticker">pause</button>
 									<button class="save_button" title="save game state">save</button>
 									<button class="clear_button" title="clear messages">clear</button>
 									<button class="export_button" title="export serialized game state to messages">export</button>
