event handling for show/hide info rows

--- a/builder.html
+++ b/builder.html
@@ -39,8 +39,9 @@
 					<td>
 						<table id='main_table' class="data-test">
 							<tr>
+								<th class="expand-button-display"></th>
 								<th class="item-index-display">#</th>
-								<th class="expand-button-display">+</th>
+								
 								<th align="left">name</th>
 								<th class="numeric-display">count</th>
 								<th class="numeric-display">accrue/s</th>
@@ -101,6 +102,7 @@
 			<p>notes:
 			<ul>
 				<li>build a rube goldberg machine.</li>
+				<li>when a rube goldberg machine starts building rube-goldberg machines, perpetual motion is attained.</li>
 				<li>more info about the game is coming. for now, build things to build more things. some clues/hints/explanations can be found in the tool-tips.</li>
 				<li>prestige is coming.</li>
 			</ul>
