--- a/builder.html
+++ b/builder.html
@@ -12,7 +12,8 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<div id="its-wrapper"></div>
+		<div id='projection' bind='textContent:count'></div>
+
 		<div id='top_div'>
 			<p>
 				<div id='total_value_div'>
@@ -103,11 +104,11 @@
 			<ul>
 				<li>build a rube goldberg machine.</li>
 				<li>when a rube goldberg machine starts building rube-goldberg machines, perpetual motion is attained.</li>
-				<li>more info about the game is coming. for now, build things to build more things. some clues/hints/explanations can be found in the tool-tips.</li>
-				<li>prestige is coming.</li>
+				<li>more info about the game is coming. for now, build things to build more things.</li>
 			</ul>
 			</p>
 		</div>
+		<div id="its-wrapper"></div>
 	</body>
 </html>
 
@@ -115,3 +116,35 @@
 
 <script type="text/javascript" src="js/builder.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
+
+<script>
+function bindData(domElement, obj) {
+    var bind = domElement.getAttribute("bind").split(":");
+    var domAttr = bind[0].trim(); // the attribute on the DOM element
+    var itemAttr = bind[1].trim(); // the attribute the object
+
+    // when the object changes - update the DOM
+    Object.observe(obj, function (change) {
+        //console.log(change);
+        domElement[domAttr] = obj[itemAttr]; 
+    });
+    // when the dom changes - update the object
+    new MutationObserver(updateObj).observe(domElement, { 
+        attributes: true,
+        childList: true,
+        characterData: true
+    });
+    domElement.addEventListener("keyup", updateObj);
+    domElement.addEventListener("click",updateObj);
+    function updateObj(){
+        obj[itemAttr] = domElement[domAttr];   
+    }
+    domElement[domAttr] = obj[itemAttr]; 
+}
+
+its.a('app loaded');
+/*var field = document.getElementById("projection");
+bindData(field, game.map[0]);*/
+
+
+</script>
