--- a/builder.html
+++ b/builder.html
@@ -16,7 +16,7 @@
 					<b><text title="total value">v</text></b>
 					<text id="total_value" title="total value">0</text>
 					<b><text title="delta value">&beta;<sub>v</text></b>
-					<text id="total_value_rate" title="delta value">0/s</text>
+					<text id="total_value_rate" title="beta value">0/s</text>
 					<b><text title="gamma value">&gamma;<sub>v</sub></text></b>
 					<text id="total_value_accel" title="gamma value">0/s<sup>2</sup></text>
 					<br>
