more cluster dev

--- a/builder.html
+++ b/builder.html
@@ -2,6 +2,7 @@
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 
+<script src="http://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.5.3/numeral.min.js"></script>
 <script type="text/javascript" src="js/util.js"></script>
 <script type="text/javascript" src="js/functions.js"></script>
 
@@ -27,10 +28,7 @@
 			</div>
 
 			<div id="tab_bar_div" class="tab_bar_div" data-visible="true">
-				<div id="tab_div_1" class="tab_bar_div_child left">Cluster 1</div>
-				<div id="tab_div_2" class="tab_bar_div_child left">Cluster 2</div>
-				<div id="tab_div_3" class="tab_bar_div_child left">Cluster 3</div>
-				<div id="tab_div_4" class="tab_bar_div_child left">Cluster 4</div>
+				<div id="tab_div_0" class="tab_bar_div_child left" title="perpetual motion machine #0">PMM 0</div>
 			</div>
 
 		</div>
