--- a/builder.html
+++ b/builder.html
@@ -94,7 +94,9 @@
 									<button class="reset_button" title="reset game">reset game</button>
 									<button class="hard_reset" title="blow away local storage" onclick="hardReset();">hard reset</button>
 									<br>
-									Slider<input type="range" id='tick_rate_slider'></input>
+									<label for="fader">Slider</label>
+									<input type="range" id='tick_rate_slider' min="100" value="100" max="5000" step="100"></input>
+									<output for="fader" id="volume">50</output>
 
 				
 								</td>
