changing auto build/accrual of items

--- a/builder.html
+++ b/builder.html
@@ -94,11 +94,8 @@
 									<button class="reset_button" title="reset game">reset game</button>
 									<button class="hard_reset" title="blow away local storage" onclick="hardReset();">hard reset</button>
 									<br>
-									<label for="fader">Slider</label>
+									Slider
 									<input type="range" id='tick_rate_slider' min="100" value="100" max="5000" step="100"></input>
-									<output for="fader" id="volume">50</output>
-
-				
 								</td>
 							</tr>
 						</table>
