--- a/builder.html
+++ b/builder.html
@@ -126,7 +126,7 @@
 
 
 <script>
-addMessage(['perpetual machine of order', game.pmm.current_level +".", "goal is to build to enough", game.name( game.pmm.levels[game.pmm.current_level] ), "to start building", game.name(0)+"." ]);
+addMessage('perpetual machine of order', game.pmm.current_level +".", "goal is to build to enough", game.name( game.pmm.levels[game.pmm.current_level] ), "to start building", game.name(0)+".");
 
 its.a('app loaded');
 
