fixed messages window

--- a/builder.html
+++ b/builder.html
@@ -46,11 +46,11 @@
 								
 								<th align="left">name</th>
 								<th class="numeric-display">count</th>
-								<th class="numeric-display">accrue/s</th>
-								<th class="numeric-display">build/s</th>
+								<th class="numeric-display">*</th>
+								<th class="numeric-display">next</th>
 								<th colspan=3>build</th>	
 								<th colspan=2>&#8615;</th>
-								<th colspan=3>rate+</th>
+								<th colspan=3>upgrade</th>
 								<th colspan=2>&#8613;</th>
 							</tr>
 
