more costing tweaks

--- a/builder.html
+++ b/builder.html
@@ -84,6 +84,7 @@
 									<button class="export_button" title="export serialized game state to messages">export</button>
 									<button class="load_button" title="load serialized game state from messages">load</button>
 									<button class="export_json_button" title="show game state JSON">JSON</button>
+									<button class="stats" title="show game stats">stats</button>
 								</td>
 							</tr>
 							<tr>
