--- a/builder.html
+++ b/builder.html
@@ -93,9 +93,9 @@
 									<text>ms</text-->
 									<button class="reset_button" title="reset game">reset game</button>
 									<button class="hard_reset" title="blow away local storage" onclick="hardReset();">hard reset</button>
-									<br>
+									<!--br>
 									Slider
-									<input type="range" id='tick_rate_slider' min="100" value="100" max="5000" step="100"></input>
+									<input type="range" id='tick_rate_slider' min="100" value="100" max="5000" step="100"></input-->
 								</td>
 							</tr>
 						</table>
@@ -129,6 +129,4 @@
 addMessage(['perpetual machine of order', game.pmm.current_level +".", "goal is to build to enough", game.name( game.pmm.levels[game.pmm.current_level] ), "to start building", game.name(0)+"." ]);
 
 its.a('app loaded');
-
-// +'^'+game.pmm.current_level,'=', numberFormat(prestigeMultiplier()), 'initialized' ] );
 </script>
