--- a/v3/rgm.html
+++ b/v3/rgm.html
@@ -16,27 +16,27 @@
 		<div id="main_div" data-visible="true" class="top-level-div">
 			<table id='main_table'>
 				<tr>
-					<th class="expand-button-display"></th>
+					<th align="center"></th>
 					<th class="item-index-display">#</th>
 					
-					<th align="left">name</th>
+					<th class="item-index-display" align="left">name</th>
 					<th class="numeric-display">count</th>
-					<th class="numeric-display">accrue/s</th>
-					<th class="numeric-display">build/s</th>
-					<th colspan=3>build</th>	
-					<th colspan=2>&#8615;</th>
-					<th colspan=3>rate+</th>
-					<th colspan=2>&#8613;</th>
+					<th class="numeric-display">build</th>
+					<th class=""></th>
+					<th colspan=3></th>	
+					<th colspan=2></th>
+					<th colspan=3></th>
+					<th colspan=2></th>
 				</tr>
 
-				<tr id='main-item-row-to-clone' data-visible="true">
+				<tr id='main-item-row-to-clone' data-visible="false">
 					<td></td> <td></td> <td></td> <td></td> <td></td>
 					<td></td> <td></td> <td></td> <td></td> <td></td>
 					<td></td> <td></td> <td></td> <td></td> <td></td>
 					<td></td>
 				</tr>
 
-				<tr id='expanded-item-row-to-clone' data-visible="true">
+				<tr id='expanded-item-row-to-clone' data-visible="false">
 					<td></td>
 					<td colspan=14 class="expanded-item-data-col"></td>
 					<td></td>
