more v3 impl. use half-life decay for item consumption

--- a/v1/builder.html
+++ b/v1/builder.html
@@ -44,7 +44,7 @@
 								<th class="expand-button-display"></th>
 								<th class="item-index-display">#</th>
 								
-								<th align="left">name</th>
+								<th align="left" class="item-index-display">name</th>
 								<th class="numeric-display">count</th>
 								<th class="numeric-display">accrue/s</th>
 								<th class="numeric-display">build/s</th>
