--- a/v3/rgm.html
+++ b/v3/rgm.html
@@ -13,13 +13,36 @@
 
 		<div id="tab_bar_div" data-visible="true" class="top-level-div"><p>Tab Bar Content Here</p></div>
 
+		<div id="options_div" class="top-level-div">
+			<table id='options_table'>
+				<tr>
+					<td>
+						<button class="pause_button" title="pause/resume game ticker">pause</button>
+						<button class="save_button" title="save game state">save</button>
+						<button class="message_button" title="">show message box</button>
+						<button class="clear_button" title="clear messages">clear messages</button>
+						<button class="export_button" title="export serialized game state to messages">export</button>
+						<button class="load_button" title="load serialized game state from messages">load</button>
+						<button class="export_json_button" title="show game state JSON">JSON</button>
+						<button class="stats" title="show game stats">stats</button>
+						<button class="reset_button" title="reset game">reset game</button>
+						<button class="hard_reset" title="blow away local storage">hard reset</button>
+						<!--br>
+						Slider
+						<input type="range" id='tick_rate_slider' min="100" value="100" max="5000" step="100"></input-->
+					</td>
+				</tr>
+				<tr><td><div id="message-wrapper" class="top-level-div" data-visible="false"></div></td></tr>
+			</table>
+		</div>
+
 		<div id="main_div" data-visible="true" class="top-level-div">
 			<table id='main_table'>
 				<tr>
 					<th align="center"></th>
 					<th class="item-index-display">#</th>
 					
-					<th class="item-index-display" align="left">name</th>
+					<th class="item-name-display" align="left">name</th>
 					<th class="numeric-display">count</th>
 					<th class="numeric-display">build</th>
 					<th class=""></th>
@@ -45,28 +68,6 @@
 
 		</div>
 
-		<div id="options_div" class="top-level-div">
-			<table id='options_table'>
-				<tr>
-					<td>
-						<button class="pause_button" title="pause/resume game ticker">pause</button>
-						<button class="save_button" title="save game state">save</button>
-						<button class="clear_button" title="clear messages">clear</button>
-						<button class="export_button" title="export serialized game state to messages">export</button>
-						<button class="load_button" title="load serialized game state from messages">load</button>
-						<button class="export_json_button" title="show game state JSON">JSON</button>
-						<button class="stats" title="show game stats">stats</button>
-						<button class="reset_button" title="reset game">reset game</button>
-						<button class="hard_reset" title="blow away local storage">hard reset</button>
-						<!--br>
-						Slider
-						<input type="range" id='tick_rate_slider' min="100" value="100" max="5000" step="100"></input-->
-					</td>
-				</tr>
-			</table>
-		</div>
-
-		<div id="message-wrapper" class="top-level-div"></div>
 		<div id="its-wrapper" class="top-level-div"></div>
 		
 	</body>
