decay/growth are inverse calculations now

--- a/v3/rgm.html
+++ b/v3/rgm.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<title>rube goldberg machine</title>
 	</head>
 	<body>
 		<div id='header_div' data-visible="true" class="top-level-div"><p>Header Content Here</p></div>
@@ -17,9 +18,10 @@
 			<table id='options_table'>
 				<tr>
 					<td>
+						<button class="message_button" title="">show message box</button>
+
 						<button class="pause_button" title="pause/resume game ticker">pause</button>
 						<button class="save_button" title="save game state">save</button>
-						<button class="message_button" title="">show message box</button>
 						<button class="clear_button" title="clear messages">clear messages</button>
 						<button class="export_button" title="export serialized game state to messages">export</button>
 						<button class="load_button" title="load serialized game state from messages">load</button>
