--- a/v3/rgm.html
+++ b/v3/rgm.html
@@ -10,10 +10,6 @@
 		<title>rube goldberg machine</title>
 	</head>
 	<body>
-		<div id='header_div' data-visible="true" class="top-level-div"><p>Header Content Here</p></div>
-
-		<div id="tab_bar_div" data-visible="true" class="top-level-div"><p>Tab Bar Content Here</p></div>
-
 		<div id="options_div" class="top-level-div">
 			<table id='options_table'>
 				<tr>
@@ -38,6 +34,10 @@
 			</table>
 		</div>
 
+		<div id='header_div' data-visible="true" class="top-level-div"><p>Header Content Here</p></div>
+
+		<div id="tab_bar_div" data-visible="true" class="top-level-div tab_bar_div"><p>Tab Bar Content Here</p></div>
+		
 		<div id="main_div" data-visible="true" class="top-level-div">
 			<table id='main_table'>
 				<tr>
