--- a/v4/machines.html
+++ b/v4/machines.html
@@ -9,6 +9,31 @@
 	</head>
 	
 	<body>
+
+		<div id="options_div" class="top-level-div">
+			<table id='options_table'>
+				<tr>
+					<td>
+						<button class="message_button" title="">show message box</button>
+
+						<button class="pause_button" title="pause/resume game ticker">pause</button>
+						<button class="save_button" title="save game state">save</button>
+						<button class="clear_button" title="clear messages">clear messages</button>
+						<button class="export_button" title="export serialized game state to messages">export</button>
+						<button class="load_button" title="load serialized game state from messages">load</button>
+						<button class="export_json_button" title="show game state JSON">JSON</button>
+						<button class="stats" title="show game stats">stats</button>
+						<button class="reset_button" title="reset game">reset game</button>
+						<button class="hard_reset" title="blow away local storage">hard reset</button>
+						<!--br>
+						Slider
+						<input type="range" id='tick_rate_slider' min="100" value="100" max="5000" step="100"></input-->
+					</td>
+				</tr>
+				<tr><td><div id="message-wrapper" class="top-level-div" data-visible="false"></div></td></tr>
+			</table>
+		</div>
+
 		<div id='header_div' data-visible="true" class="">header content here</div>
 
 		<div id="tab_bar_div" data-visible="true" class="">tab bar content here</div>
@@ -19,9 +44,11 @@
 	</body>
 </html>
 
+<script src="http://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.5.3/numeral.min.js"></script>
 <script type="text/javascript" src="../common/util.js"></script>
 <script type="text/javascript" src="../common/state.js"></script>
 <script type="text/javascript" src="../common/timer.js"></script>
+<script type="text/javascript" src="../common/messages.js"></script>
 
 <script type="text/javascript" src="js/def.js"></script>
 <script type="text/javascript" src="js/fcns.js"></script>
@@ -30,10 +57,17 @@
 <script type="text/javascript" src="js/events.js"></script>
 
 <script>
-var app = extend(new App(), getFromLocalStorage(app.NAME));
-for (var i=0; i<app.pmm_defs.length; i++){
-	var p = app.pmm_defs[i];
-	app.pmm_defs[i] = extend(new PerpetualMotionMachine(p.id, p.NAME, p.DESCRIPTION, p.items), p);
+var loaded_state = getFromLocalStorage(app.NAME);
+var app;
+if (loaded_state===null)
+	app = new App();
+else {
+	var app = extend(new App(), loaded_state);
+	for (var i=0; i<app.pmm_defs.length; i++){
+		var p = app.pmm_defs[i];
+		app.pmm_defs[i] = extend(new PerpetualMotionMachine(p.id, p.NAME, p.DESCRIPTION, p.items), p);
+		console.log(app.pmm_defs[i].NAME, app.pmm_defs[i].active);
+	}
 }
 
 // from init.js
