improved builing code

--- a/v4/machines.html
+++ b/v4/machines.html
@@ -14,17 +14,17 @@
 			<table id='options_table'>
 				<tr>
 					<td>
-						<button class="message_button" title="">show message box</button>
+						<button class="option_button" id="message_button" title="">show message box</button>
 
-						<button class="pause_button" title="pause/resume game ticker">pause</button>
-						<button class="save_button" title="save game state">save</button>
-						<button class="clear_button" title="clear messages">clear messages</button>
-						<button class="export_button" title="export serialized game state to messages">export</button>
-						<button class="load_button" title="load serialized game state from messages">load</button>
-						<button class="export_json_button" title="show game state JSON">JSON</button>
-						<button class="stats" title="show game stats">stats</button>
-						<button class="reset_button" title="reset game">reset game</button>
-						<button class="hard_reset" title="blow away local storage">hard reset</button>
+						<button class="option_button" id="pause_button" title="pause/resume game ticker">pause</button>
+						<button class="option_button" id="save_button" title="save game state">save</button>
+						<button class="option_button" id="clear_button" title="clear messages">clear messages</button>
+						<button class="option_button" id="export_button" title="export serialized game state to messages">export</button>
+						<button class="option_button" id="load_button" title="load serialized game state from messages">load</button>
+						<button class="option_button" id="export_json_button" title="show game state JSON">JSON</button>
+						<button class="option_button" id="stats" title="show game stats">stats</button>
+						<button class="option_button" id="reset_button" title="reset game">reset game</button>
+						<button class="option_button" id="hard_reset" title="blow away local storage">hard reset</button>
 						<!--br>
 						Slider
 						<input type="range" id='tick_rate_slider' min="100" value="100" max="5000" step="100"></input-->
