added https to access itsa

--- a/v1/builder.html
+++ b/v1/builder.html
@@ -122,7 +122,7 @@
 <script type="text/javascript" src="js/builder.js"></script>
 <script type="text/javascript" src="js/event_listeners.js"></script>
 
-<script src='://brandonbrule.github.io/itsa/js/itsa.js'></script>
+<script src='//brandonbrule.github.io/itsa/js/itsa.js'></script>
 
 
 <script>
