--- a/v2/builder2.html
+++ b/v2/builder2.html
@@ -2,7 +2,7 @@
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.5.3/numeral.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.5.3/numeral.min.js"></script>
 <script type="text/javascript" src="js/util.js"></script>
 <script type="text/javascript" src="js/functions.js"></script>
 
@@ -126,7 +126,7 @@
 <script type="text/javascript" src="js/builder.js"></script>
 <script type="text/javascript" src="js/event_listeners.js"></script>
 
-<script src='http://brandonbrule.github.io/itsa/js/itsa.js'></script>
+<script src='//brandonbrule.github.io/itsa/js/itsa.js'></script>
 
 
 <script>
