added https to access itsa

--- a/v3/rgm.html
+++ b/v3/rgm.html
@@ -76,9 +76,9 @@
 </html>
 
 <script type="text/javascript" src="../common/messages.js"></script>
-<script src='http://brandonbrule.github.io/itsa/js/itsa.js'></script>
+<script src='//brandonbrule.github.io/itsa/js/itsa.js'></script>
 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.5.3/numeral.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.5.3/numeral.min.js"></script>
 <script type="text/javascript" src="../common/util.js"></script>
 <script type="text/javascript" src="../common/state.js"></script>
 <script type="text/javascript" src="../common/timer.js"></script>
