--- a/v5/machines.html
+++ b/v5/machines.html
@@ -11,10 +11,10 @@
 	<body>
 		<div id='header_div' data-visible="true" class="">header content here</div>
 		<div id="tab_bar_div" data-visible="true" class="">tab bar content here</div>
-		<div id="machines_div" data-visible="true" class="pmm-collection"></div>
+		<div id="machines_div" data-visible="true" class="pmm-collection">machines</div>
 		<div id='footer_div' data-visible="true" class="">footer content here</div>
 		<div id="options_div" data-visible="true" class="options"></div>
-		<div id="message_wrapper" class="message_wrapper" data-visible="true">OK DOKAY</div>
+		<div id="message_wrapper" class="message_wrapper" data-visible="false"></div>
 	</body>
 </html>
 
