--- a/v5/machines.html
+++ b/v5/machines.html
@@ -14,7 +14,7 @@
 		<div id="machines_div" data-visible="true" class="pmm-collection">machines</div>
 		<div id='footer_div' data-visible="true" class="">footer content here</div>
 		<div id="options_div" data-visible="true" class="options"></div>
-		<div id="message_wrapper" class="message_wrapper" data-visible="false"></div>
+		<div id="message_div" class="message_wrapper" data-visible="false"></div>
 	</body>
 </html>
 
