and we are back...

--- a/v4/machines.html
+++ b/v4/machines.html
@@ -34,13 +34,13 @@
 			</table>
 		</div>
 
-		<div id='header_div' data-visible="true" class="">header content here</div>
+		<div id='header_div' data-visible="true" class=""><!--header content here--></div>
 
-		<div id="tab_bar_div" data-visible="true" class="">tab bar content here</div>
+		<div id="tab_bar_div" data-visible="true" class=""><!--tab bar content here--></div>
 
 		<div id="machines_div" data-visible="true" class="pmm-collection"></div>
 
-		<div id='footer_div' data-visible="true" class="">footer content here</div>
+		<div id='footer_div' data-visible="true" class=""><!--footer content here--></div>
 	</body>
 </html>
 
