--- a/v4/machines.html
+++ b/v4/machines.html
@@ -34,7 +34,7 @@
 			</table>
 		</div>
 
-		<div id='header_div' data-visible="true" class=""><!--header content here--></div>
+		<div id='header_div' data-visible="true" class="pmm-header"><!--header content here--></div>
 
 		<div id="tab_bar_div" data-visible="true" class=""><!--tab bar content here--></div>
 
