--- a/v4/machines.html
+++ b/v4/machines.html
@@ -44,7 +44,7 @@
 	</body>
 </html>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.5.3/numeral.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.5.3/numeral.min.js"></script>
 <script type="text/javascript" src="../common/util.js"></script>
 <script type="text/javascript" src="../common/state.js"></script>
 <script type="text/javascript" src="../common/timer.js"></script>
