--- a/v5/machines.html
+++ b/v5/machines.html
@@ -9,10 +9,10 @@
 	</head>
 	
 	<body>
-		<div id='header_div' data-visible="true" class="">header content here</div>
-		<div id="tab_bar_div" data-visible="true" class="">tab bar content here</div>
-		<div id="machines_div" data-visible="true" class="pmm-collection">machines</div>
-		<div id='footer_div' data-visible="true" class="">footer content here</div>
+		<div id="header_div"'" data-visible="true" class=""></div>
+		<div id="tab_bar_div" data-visible="true" class=""></div>
+		<div id="machines_div" data-visible="true" class="pmm-collection"></div>
+		<div id="footer_div" data-visible="true" class=""></div>
 		<div id="options_div" data-visible="true" class="options"></div>
 		<div id="message_div" class="message_wrapper" data-visible="false"></div>
 	</body>
@@ -32,13 +32,11 @@
 
 
 <script>
+var app = initApp();
 
-app = initApp();
 console.log(app);
 
 // from init.js
 buildUI();
-
-
 
 </script>
