more v5 changes. new timer mechanics

--- a/v5/machines.html
+++ b/v5/machines.html
@@ -21,7 +21,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.4/numeral.min.js"></script>
 <script type="text/javascript" src="../common/util.js"></script>
 <script type="text/javascript" src="../common/state.js"></script>
-<script type="text/javascript" src="../common/timer.js"></script>
+<script type="text/javascript" src="js/timer.js"></script>
 <script type="text/javascript" src="../common/messages.js"></script>
 
 <script type="text/javascript" src="js/const.js"></script>
@@ -33,9 +33,7 @@
 
 
 <script>
-var app = initApp();
-
-console.log(app);
+var app = buildApp();
 
 // from init.js
 buildUI();
