--- a/tab-content/demo.html
+++ b/tab-content/demo.html
@@ -3,10 +3,10 @@
 <head>
     <title>Tabbed Content</title>
     <script src="tabcontent.js" type="text/javascript"></script>
-    <link href="template1/tabcontent.css" rel="stylesheet" type="text/css" />
+    <link href="template5/tabcontent.css" rel="stylesheet" type="text/css" />
 </head>
 <body style="background:#F6F9FC; font-family:Arial;">
-    <div style="width: 500px; margin: 0 auto; padding: 120px 0 40px;">
+    <div style="width: 95%; margin: 0 auto; padding: 0px 0 0px;">
         <ul class="tabs" data-persist="true">
             <li><a href="#view1">Lorem</a></li>
             <li><a href="#view2">Using other templates</a></li>
